unpackaged/main/default/objects/Account_External_UID__c/Account_External_UID__c.object-meta.xml
<CustomObject>
    <description>Object to capture various external system ids</description>
    <label>Account External UID</label>
    <nameField>
        <displayFormat>AEU-{0000}</displayFormat>
        <label>Account External UID Name</label>
        <type>AutoNumber</type>
    </nameField>
    <pluralLabel>Account External UIDs</pluralLabel>
    <sharingModel>ControlledByParent</sharingModel>
</CustomObject>