unpackaged/main/default/objects/Account_External_UID__c/fields/AXID__c.field-meta.xml
<CustomField>
    <fullName>AXID__c</fullName>
    <label>AXID</label>
    <length>30</length>
    <type>Text</type>
</CustomField>