unpackaged/main/default/objects/Account_External_UID__c/fields/BrandID__c.field-meta.xml
<CustomField>
    <fullName>BrandID__c</fullName>
    <label>BrandID</label>
    <length>30</length>
    <type>Text</type>
</CustomField>