unpackaged/main/default/objects/Account_External_UID__c/fields/DTFID__c.field-meta.xml
<CustomField>
    <fullName>DTFID__c</fullName>
    <label>DTFID</label>
    <length>30</length>
    <type>Text</type>
</CustomField>