unpackaged/main/default/objects/Account_External_UID__c/fields/HoldingCompanyID__c.field-meta.xml
<CustomField>
    <fullName>HoldingCompanyID__c</fullName>
    <label>HoldingCompanyID</label>
    <length>30</length>
    <type>Text</type>
</CustomField>