unpackaged/main/default/objects/Account_External_UID__c/fields/HubSpotDatatransID__c.field-meta.xml
<CustomField>
    <fullName>HubSpotDatatransID__c</fullName>
    <label>HubSpotDatatransID</label>
    <length>30</length>
    <type>Text</type>
</CustomField>