unpackaged/main/default/objects/Account_External_UID__c/fields/HubSpotProximisID__c.field-meta.xml
<CustomField>
    <fullName>HubSpotProximisID__c</fullName>
    <label>HubSpotProximisID</label>
    <length>30</length>
    <type>Text</type>
</CustomField>