unpackaged/main/default/objects/Account_External_UID__c/fields/MMRID__c.field-meta.xml
<CustomField>
    <fullName>MMRID__c</fullName>
    <label>MMRID</label>
    <length>30</length>
    <type>Text</type>
</CustomField>