unpackaged/main/default/objects/Account_External_UID__c/fields/PCIProxyID__c.field-meta.xml
<CustomField>
    <fullName>PCIProxyID__c</fullName>
    <label>PCIProxyID</label>
    <length>30</length>
    <type>Text</type>
</CustomField>