unpackaged/main/default/objects/Account_External_UID__c/fields/PTFID__c.field-meta.xml
<CustomField>
    <fullName>PTFID__c</fullName>
    <label>PTFID</label>
    <length>30</length>
    <type>Text</type>
</CustomField>