unpackaged/main/default/objects/Account_External_UID__c/fields/TRSID__c.field-meta.xml
<CustomField>
    <fullName>TRSID__c</fullName>
    <label>TRSID</label>
    <length>30</length>
    <type>Text</type>
</CustomField>