unpackaged/main/default/objects/Account_External_UID__c/fields/UpsalesID__c.field-meta.xml
<CustomField>
    <fullName>UpsalesID__c</fullName>
    <label>UpsalesID</label>
    <length>30</length>
    <type>Text</type>
</CustomField>